Support imagesdir to indicate image location even if image starts with an absolute path (#1128)